--- a/app/source/html/activities/mockupPsychotherapist.html
+++ b/app/source/html/activities/mockupPsychotherapist.html
@@ -1,7 +1,7 @@
 <!-- Activity mockupHouseCleanerServiceEditor -->
 <div data-activity="mockupPsychotherapist" class="Boxes-sm animated">
     <app-inline-user-menu>@render('parts/UserMenuContents.html')</app-inline-user-menu>
-    <div class="container ServiceProfessionalPricing">
+    <div class="container">
         <div class="row">  
             <div class="SubSectionNavBar hidden-xs hidden-sm">
                 <ul>
@@ -21,60 +21,60 @@
                         <label>What will clients be booking?</label>
                         <input type="text" class="form-control" placeholder="Type the name of the service, e.g. Weekly session">             
                     </div>
-                        <div class="PricingSection">
-                            <div class="row">
-                            <label>Who can book this service?</label>
+                    <div class="LightForm-Section">
+                        <div class="row">
+                        <label>Who can book this service?</label>
+                            <div class="Select Select-block ">
+                                <select class="select-unstyled selectpicker">
+                                     <option value="3">Anyone</option>
+                                     <option value="1">First-time clients only</option>
+                                     <option value="2">Existing clients only</option>
+                                     <option value="4">Certain clients only</option>
+                                </select>
+                            </div>
+<!--
+                            <div class="select select-block ">
+                                <select class="select-unstyled selectpicker">
+                                        <option value="4">Joshua Danielson</option>
+                                        <option value="5">Iago Lorenzo</option>
+                                        <option value="6">Juan Sanchez</option>
+                                </select>
+                            </div>
+-->
+                        </div>
+                    </div>
+                    <div class="LightForm-Section">
+                        <div class="row">
+                            <label>Where can this service be booked?</label>
                                 <div class="Select Select-block ">
                                     <select class="select-unstyled selectpicker">
-                                         <option value="3">Anyone</option>
-                                         <option value="1">First-time clients only</option>
-                                         <option value="2">Existing clients only</option>
-                                         <option value="4">Certain clients only</option>
+                                        <optgroup label="My service locations">
+                                         <option value="1">My studio</option>
+                                         <option value="2">Add new service location</option>
+                                        </optgroup>
+                                        <optgroup label="My service areas">
+                                         <option value="2">5.0 miles from 94110</option>
+                                         <option value="2">Add new service area</option>
+                                        </optgroup>
+                                        <optgroup label="Remote options">
+                                         <option value="4">Phone call</option>
+                                         <option value="5">Facetime</option>
+                                         <option value="6">Google Hangout</option>
+                                         <option value="7">Skype</option>
+                                        </optgroup>
                                     </select>
                                 </div>
-<!--
-                                <div class="select select-block ">
-                                    <select class="select-unstyled selectpicker">
-                                            <option value="4">Joshua Danielson</option>
-                                            <option value="5">Iago Lorenzo</option>
-                                            <option value="6">Juan Sanchez</option>
-                                    </select>
-                                </div>
--->
+                        </div>
+                    </div>
+                    <div class="form-inline isolated">
+                        <div class="form-group">
+                            <label class="control-label">What's the price for this service?</label>
+                            <div class="input-group">
+                                <span class="input-group-addon">$</span>
+                                <input id="serviceProfessionalServiceEditor-price" type="number" class="form-control" min="0" step=".01" placeholder="0.00"/>
                             </div>
                         </div>
-                        <div class="PricingSection">
-                            <div class="row">
-                                <label>Where can this service be booked?</label>
-                                    <div class="Select Select-block ">
-                                        <select class="select-unstyled selectpicker">
-                                            <optgroup label="My service locations">
-                                             <option value="1">My studio</option>
-                                             <option value="2">Add new service location</option>
-                                            </optgroup>
-                                            <optgroup label="My service areas">
-                                             <option value="2">5.0 miles from 94110</option>
-                                             <option value="2">Add new service area</option>
-                                            </optgroup>
-                                            <optgroup label="Remote options">
-                                             <option value="4">Phone call</option>
-                                             <option value="5">Facetime</option>
-                                             <option value="6">Google Hangout</option>
-                                             <option value="7">Skype</option>
-                                            </optgroup>
-                                        </select>
-                                    </div>
-                            </div>
-                        </div>
-                        <div class="form-inline isolated">
-                            <div class="form-group">
-                                <label class="control-label">What's the price for this service?</label>
-                                <div class="input-group">
-                                    <span class="input-group-addon">$</span>
-                                    <input id="serviceProfessionalServiceEditor-price" type="number" class="form-control" min="0" step=".01" placeholder="0.00"/>
-                                </div>
-                            </div>
-                        </div> 
+                    </div> 
                         <div class="form-inline isolated">
                             <label class="control-label">How much time will the service take?</label>
                             <div class="row">
@@ -102,7 +102,6 @@
                         <div class="form-group">
                             <label class="control-label"><span>Are there any time restrictions for clients booking this service?</span></label>
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="e.g., Weekday mornings only">
-
                             </textarea>
                         </div>
                     <div class="LightForm-submitBar">
