--- a/app/source/html/activities/mockupServiceConsultationEditor.html
+++ b/app/source/html/activities/mockupServiceConsultationEditor.html
@@ -1,7 +1,7 @@
 <!-- Activity mockupHouseCleanerServiceEditor -->
 <div data-activity="mockupServiceConsultationEditor" class="Boxes-sm animated">
     <app-inline-user-menu>@render('parts/UserMenuContents.html')</app-inline-user-menu>
-    <div class="container ServiceProfessionalPricing">
+    <div class="container">
         <div class="row">  
             <div class="SubSectionNavBar hidden-xs hidden-sm">
                 <ul>
@@ -19,7 +19,7 @@
                         <label>What will clients be booking?</label>
                         <input type="text" class="form-control" placeholder="Type the name of the consultation, e.g. New client consultation"> 
                     </div>
-                    <div class="PricingSection">
+                    <div class="LightForm-Section">
                         <div class="row">
                             <label>Who can book this consultation?</label>
                             <div class="Select Select-block">
@@ -39,7 +39,7 @@
 -->
                         </div>
                     </div>
-                    <div class="PricingSection">
+                    <div class="LightForm-Section">
                         <div class="row">
                             <label>Where can this consulation be booked?</label>
                             <div class="Select Select-block">
@@ -62,11 +62,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="checkbox"> 
-                        <label> 
-                            <input type="checkbox"> <span>This consultation is available to first-time clients only</span> 
-                        </label> 
-                    </div>
                     <div class="form-inline isolated">
                         <div class="form-group">
                             <label class="control-label">What's the price for this consultation?</label>
@@ -76,28 +71,30 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="form-inline isolated">
-                        <label class="control-label">How much time will the consultation take?</label>
-                        <div class="row">
-                            <span class="col-xs-12 col-sm-5 form-group">
-                                <label class="control-label sr-only">Hours</label>
-                                <div class="input-group">
-                                    <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control" min="0" step="1" placeholder="1"/>
-                                    <span class="input-group-addon">hours</span>
-                                </div>
-                            </span>
-                            <span class="col-xs-12 col-sm-offset-1 col-sm-5 form-group">
-                                <label class="control-label sr-only">Minutes</label>
-                                <div class="input-group">
-                                    <input id="serviceProfessionalServiceEditor-durationMinutes" type="number" class="form-control" min="0" step="15" placeholder="0"/>
-                                    <label class="control-label">
-                                        <span>What can clients expect during the consultation?</span>
-                                    </label>
-                                    <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Describe the Pyschotherapist consultation you'll provide"></textarea>
-                                </div>
-                            </span>
+                        <div class="form-inline isolated">
+                            <label class="control-label">How much time will the service take?</label>
+                            <div class="row">
+                                <span class="col-xs-12 col-sm-5 form-group">
+                                    <label class="control-label sr-only">Hours</label>
+                                    <div class="input-group">
+                                        <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control" min="0" step="1" placeholder="1"/>
+                                        <span class="input-group-addon">hours</span>
+                                    </div>
+                                </span>
+                                <span class="col-xs-12 col-sm-offset-1 col-sm-5 form-group">
+                                    <label class="control-label sr-only">Minutes</label>
+                                    <div class="input-group">
+                                        <input id="serviceProfessionalServiceEditor-durationMinutes" type="number" class="form-control" min="0" step="15" placeholder="0"/>
+                                        <span class="input-group-addon">minutes</span>
+                                    </div>
+                                </span>
+                            </div>
                         </div>
-                    </div>
+                        <div class="form-group">
+                            <label class="control-label"><span>What can clients expect during the consultation?</span></label>
+                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Describe the Pyschotherapist services you'll provide">
+                            </textarea>
+                        </div>  
                     <div class="row">
                         <label class="control-label col-xs-12">My rates start at:</label>
                         <div class="form-group col-xs-12 col-sm-5">
@@ -126,7 +123,7 @@
                                 </label>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                     <div class="LightForm-submitBar">
                         <button type="submit" class="btn btn-primary btn-block">Save</button>
                     </div>      
